2004-03-05  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-preferences-dialog.c: make the enable_syntax_highlight
	check button work, fixes #135628.
	* gedit-document.c: turn syntax highlighting on only if the pref is set
	to TRUE.

2004-03-05  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit-document.c (get_slow_mime_type): new function (it will
	be removed when gnome-vfs will expose an equivalent public
	function)
	(gedit_document_set_uri): use get_slow_mime_type to get the mime-type,
	fixes bug #135565 (.cgi files no longer highlight)

	* gedit-mdi-child.c (get_slow_mime_type): new function
	(set_tab_icon)(set_tooltip): use get_slow_mime_type to get 
	the mime-type

	Probably we should add a gedit_document_get_mime_type function.

2004-02-25  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit-commands.c (gedit_cmd_help_about): added Paolo Borelli 
	to the list of authors, update copyright string

2004-02-24  Paolo Maggi  <paolo.maggi@polito.it> 

	[ gedit 2.5.90 released ]

2004-02-24  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit-file-selector-util.c (all_text_files_filter):
	the "All Text Files" filter now include also perl, pythons, php
	and desktop files (as special cases). 
	(create_gtk_selector): set "All Files" filter as default filter

	* gedit2.[ch] (gedit_get_mdi): new method

2004-02-22  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-preferences.glade2: port to GtkColorButton
	* dialogs/gedit-preferences-dialog.c: ditto.

2004-02-21  Paolo Borelli  <pborelli@katamail.com>

	* dialogs/gedit-preferences.glade2: port to GtkFontButton
	* dialogs/gedit-preferences-dialog.c: ditto.

2004-02-19  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit-mdi-child.c (set_tooltip): does not display "MIME-Type: Unknown"
	in the case mime_type != NULL and mime_description == NULL 

2004-02-19  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit-file-selector-util.c: use gtk_dialog_run instead of the
	equivalent hand made solution we used till now