@@ -1,3 +1,8 @@
+2004-03-05  Paolo Maggi  <paolo.maggi@polito.it>
+
+	* gedit-file-selector-util.c (analyze_response): fixed bug #136231 (Should 
+	not run the file chooser in a loop to enter folders)
+
 2004-03-05  Paolo Borelli  <pborelli@katamail.com>
 
 	* dialogs/gedit-preferences-dialog.c: make the enable_syntax_highlight
